@@ -120,6 +120,6 @@
 		</dict>
 	</array>
 	<key>LSMinimumSystemVersion</key> 
-	<string>10.3.9</string>
+	<string>10.4</string>
 </dict>
 </plist>
