@@ -5,6 +5,16 @@
 <head>
 	<meta http-equiv="content-type" content="application/xhtml; charset=utf-8" />
 	<title>Release Notes</title>
+	<style type="text/css">
+p.note {
+	display: block;
+    padding: 3px 10px 3px 10px;
+    background-color: #fff3f3;
+    background-image: url( ../images/exclamation.png );
+    border: 1px solid red;
+    color: #cc0000;
+}
+	</style>
 </head>
 
 <body>
@@ -13,11 +23,16 @@
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
 		3.0b1</a></strong> <em></em> (Build $Revision$)<br />
 
+		<p class="note">
+<strong>Note</strong>: You are required to run <strong>OS X 10.4</strong> (Tiger) or later to run Cyberduck 3!
+		</p>
+
 		<ul>
 <li>[Feature] Amazon Simple Storage Service (S3) support (http://aws.amazon.com/s3) [<a href="http://trac.cyberduck.ch/ticket/1725">#1725</a>]</li>
 <li>[Feature] WebDAV protocol support [<a href="http://trac.cyberduck.ch/ticket/464">#464</a>]</li>
 <li>[Feature] Search bookmarks [<a href="http://trac.cyberduck.ch/ticket/916">#916</a>]</li>
 <li>[Feature] Bookmark editor inside browser window instead of drawer</li>
+<li>[Feature] Read trust settings for certificates from Keychain</li>
 <li>[Feature] Different editors for different file types [<a href="http://trac.cyberduck.ch/ticket/146">#146</a>]
 <li>[Feature] PRET (PRE Transfer) command support for distributed FTP (http://www.drftpd.org) [<a href="http://trac.cyberduck.ch/ticket/684">#684</a>]</li>
 <li>[Feature] Skip option not available in transfer prompt [<a href="http://trac.cyberduck.ch/ticket/1159">#1159</a>]</li>
